--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <link rel="stylesheet" href="src/css/style.css" />
 
-    <script defer src="src/js/script.js"></script>
+    <script type="module" src="src/js/script.js"></script>
     <title>globetrotter // Map your workouts</title>
   </head>
   <body>
