--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="form__row">
             <label class="form__label">Type</label>
             <select class="form__input form__input--type">
-              <option value="running">Running</option>
+              <option value="running" selected>Running</option>
               <option value="cycling">Cycling</option>
             </select>
           </div>
